<?xml version="1.0"?>
<package format="2">
  <name>streaming_controllers</name>
  <version>0.0.0</version>
  <description>The streaming_controllers package</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend> 
  <depend>std_msgs</depend> 
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  
  <export>
    <controller_interface plugin="${prefix}/streaming_controllers_plugins.xml"/>
  </export>
</package>
